bugs fixed