@@ -1,5 +1,8 @@
 package com.example.AddressBookManagement.services;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
 import com.example.AddressBookManagement.DTO.AddressDTO;
 import com.example.AddressBookManagement.model.Address;
 import com.example.AddressBookManagement.repository.AddressRepository;
@@ -10,15 +13,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
-
 @ExtendWith(MockitoExtension.class)
-public class AddressServiceImplTest {
+class AddressServiceImplTest {
 
     @Mock
     private AddressRepository addressRepository;
@@ -31,124 +30,102 @@ public class AddressServiceImplTest {
 
     @BeforeEach
     void setUp() {
-        address = new Address(1L, "John Doe", "9876543210", "john@example.com", "New York");
-
-        addressDTO = new AddressDTO();
-        addressDTO.setName("John Doe");
-        addressDTO.setPhone("9876543210");
-        addressDTO.setEmail("john@example.com");
-        addressDTO.setCity("New York");
-    }
-
-    // ✅ Test getAllAddresses()
-    @Test
-    void testGetAllAddresses_Success() {
-        when(addressRepository.findAll()).thenReturn(Arrays.asList(address));
-
-        List<Address> addresses = addressService.getAllAddresses();
-
-        assertFalse(addresses.isEmpty(), "Address list should not be empty");
-        assertEquals(1, addresses.size(), "Only one address should be present");
+        address = new Address(1L, "John Doe", "1234567890", "john@example.com", "New York");
+        addressDTO = new AddressDTO("John Doe", "1234567890", "john@example.com", "New York");
     }
 
     @Test
-    void testGetAllAddresses_EmptyList() {
-        when(addressRepository.findAll()).thenReturn(Arrays.asList());
-
-        List<Address> addresses = addressService.getAllAddresses();
-
-        assertTrue(addresses.isEmpty(), "Address list should be empty");
+    void testGetAllAddressesTrue() {
+        when(addressRepository.findAll()).thenReturn(List.of(address));
+        assertTrue(addressService.getAllAddresses().size() > 0);
     }
 
-    // ✅ Test getAddressById()
     @Test
-    void testGetAddressById_Success() {
+    void testGetAllAddressesFalse() {
+        when(addressRepository.findAll()).thenReturn(List.of());
+        assertFalse(addressService.getAllAddresses().size() > 0);
+    }
+
+    @Test
+    void testGetAllAddressesThrows() {
+        when(addressRepository.findAll()).thenThrow(new RuntimeException("Database error"));
+        assertThrows(RuntimeException.class, () -> addressService.getAllAddresses());
+    }
+
+    @Test
+    void testGetAddressByIdTrue() {
         when(addressRepository.findById(1L)).thenReturn(Optional.of(address));
-
-        Optional<Address> retrievedAddress = addressService.getAddressById(1L);
-
-        assertTrue(retrievedAddress.isPresent(), "Address should be found");
-        assertEquals("John Doe", retrievedAddress.get().getName());
+        assertTrue(addressService.getAddressById(1L).isPresent());
     }
 
     @Test
-    void testGetAddressById_NotFound() {
-        when(addressRepository.findById(99L)).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(RuntimeException.class, () -> addressService.getAddressById(99L));
-
-        assertEquals("Address not found", exception.getMessage());
+    void testGetAddressByIdFalse() {
+        when(addressRepository.findById(1L)).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> addressService.getAddressById(1L));
     }
 
-    // ✅ Test createAddress()
+
     @Test
-    void testCreateAddress_Success() {
+    void testGetAddressByIdThrows() {
+        when(addressRepository.findById(1L)).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> addressService.getAddressById(1L));
+    }
+
+    @Test
+    void testCreateAddressTrue() {
         when(addressRepository.save(any(Address.class))).thenReturn(address);
-
-        Address createdAddress = addressService.createAddress(addressDTO);
-
-        assertNotNull(createdAddress, "Created address should not be null");
-        assertEquals("John Doe", createdAddress.getName(), "Created name should match");
+        assertTrue(addressService.createAddress(addressDTO) != null);
     }
 
     @Test
-    void testCreateAddress_ThrowsException() {
-        when(addressRepository.save(any(Address.class))).thenThrow(new RuntimeException("Database error"));
-
-        Exception exception = assertThrows(RuntimeException.class, () -> addressService.createAddress(addressDTO));
-
-        assertEquals("Database error", exception.getMessage());
+    void testCreateAddressFalse() {
+        when(addressRepository.save(any(Address.class))).thenReturn(null);
+        assertFalse(addressService.createAddress(addressDTO) != null);
     }
 
-    // ✅ Test updateAddress()
     @Test
-    void testUpdateAddress_Success() {
+    void testCreateAddressThrows() {
+        when(addressRepository.save(any(Address.class))).thenThrow(new RuntimeException("Save error"));
+        assertThrows(RuntimeException.class, () -> addressService.createAddress(addressDTO));
+    }
+
+    @Test
+    void testUpdateAddressTrue() {
         when(addressRepository.findById(1L)).thenReturn(Optional.of(address));
         when(addressRepository.save(any(Address.class))).thenReturn(address);
-
-        Address updatedAddress = addressService.updateAddress(1L, addressDTO);
-
-        assertNotNull(updatedAddress, "Updated address should not be null");
-        assertEquals("John Doe", updatedAddress.getName(), "Updated address name should match");
+        assertTrue(addressService.updateAddress(1L, addressDTO) != null);
     }
 
     @Test
-    void testUpdateAddress_NotFound() {
-        when(addressRepository.findById(99L)).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(RuntimeException.class, () -> addressService.updateAddress(99L, addressDTO));
-
-        assertEquals("Address not found", exception.getMessage());
+    void testUpdateAddressFalse() {
+        when(addressRepository.findById(1L)).thenReturn(Optional.empty());
+        assertThrows(RuntimeException.class, () -> addressService.updateAddress(1L, addressDTO));
     }
 
-    // ✅ Test deleteAddress()
     @Test
-    void testDeleteAddress_Success() {
+    void testUpdateAddressThrows() {
+        when(addressRepository.findById(1L)).thenReturn(Optional.of(address));
+        when(addressRepository.save(any(Address.class))).thenThrow(new RuntimeException("Update error"));
+        assertThrows(RuntimeException.class, () -> addressService.updateAddress(1L, addressDTO));
+    }
+
+    @Test
+    void testDeleteAddressTrue() {
         when(addressRepository.existsById(1L)).thenReturn(true);
         doNothing().when(addressRepository).deleteById(1L);
-
         assertDoesNotThrow(() -> addressService.deleteAddress(1L));
-        verify(addressRepository, times(1)).deleteById(1L);
     }
 
     @Test
-    void testDeleteAddress_NotFound() {
-        when(addressRepository.existsById(99L)).thenReturn(false);
-
-        Exception exception = assertThrows(RuntimeException.class, () -> addressService.deleteAddress(99L));
-
-        assertEquals("Address not found", exception.getMessage());
+    void testDeleteAddressFalse() {
+        when(addressRepository.existsById(1L)).thenReturn(false);
+        assertThrows(RuntimeException.class, () -> addressService.deleteAddress(1L));
     }
 
     @Test
-    void testDeleteAddress_ThrowsException() {
-        doThrow(new RuntimeException("Address not found")).when(addressRepository).deleteById(99L);
-
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            addressService.deleteAddress(99L);
-        });
-
-        assertEquals("Address not found", exception.getMessage());
+    void testDeleteAddressThrows() {
+        when(addressRepository.existsById(1L)).thenReturn(true);
+        doThrow(new RuntimeException("Delete error")).when(addressRepository).deleteById(1L);
+        assertThrows(RuntimeException.class, () -> addressService.deleteAddress(1L));
     }
-
 }
